# MacTTS

./: .gitignore  ARCHITECTURE.md  BUILD.md  BUILD_QUICK_START.md  CHANGELOG.md  DEVELOPMENT.md  LocalKoreanTTS-Linux.spec  QUICKSTART.md  README.md  app_macos.spec  build_linux_test.py  build_macos.sh  check_ffmpeg.py  check_pyside.py  diagnose.py  gui_entry.py  mac_app.spec  mac_bootstrap.sh  mac_e2e_test.sh  pyproject.toml  requirements.txt
dialog-tts/: PERFORMANCE.md  README.md  audio_utils.py  benchmark_enhanced.py  build_dialog_tts_gui.sh  dialog-tts  dialog_tts.py  dialog_tts.spec  dialog_tts_enhanced.py  dialog_tts_gui.py  dialog_tts_gui.spec  parser_utils.py  requirements.txt
dialog-tts/backends/: __init__.py  edge_tts_backend.py  mac_nsspeech.py  mac_say_cli.py  xtts_backend.py
dialog-tts/config/: speakers.yaml  speakers_xtts.yaml
dialog-tts/samples/: dialog.txt  dialog_custom.txt
dialog-tts/tests/: test_audio.py  test_cli_smoke.py  test_parser.py
podcast_duet_gui/: README.md  __init__.py  app.py  audio_pipeline.py  engine_bridge.py  parser_rules.py  requirements.txt  timeline_model.py
podcast_duet_gui/tests/: __init__.py  test_parser.py
resources/: app_icon.icns
sample/: sample.txt
scripts/: mac_bootstrap.sh  setup_test_model.py
src/localkoreantts/: __init__.py  __main__.py  audio_io.py  cli.py  config.py  engine.py  ffmpeg.py  gui.py  paths.py  (+1 more)
tests/: conftest.py  test_audio_io.py  test_audio_mock.py  test_cli.py  test_cli_smoke.py  test_config.py  test_engine.py  test_ffmpeg.py  test_gui.py  test_gui_smoke.py  test_models.py  test_paths.py
